Checkpoint with native java object support. Add command "import java classpath ..." Add command "jset" Allow XValue's to be any Object Basic conversion to/from Object to XdmValue Add object type (classname) to xtype and set commands Add direct passing of connection to xsql as a native JDBC Connection object Move classloader to shell to allow scoped import java statements.